--- a/app/src/main/res/values-sv/strings.xml
+++ b/app/src/main/res/values-sv/strings.xml
@@ -82,8 +82,8 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="error_need_storage_permission_to_save_documents">Behöver åtkomst till lagringsmedia för att spara dokument</string>
     <string name="open_with">Öppna med</string>
     <string name="sort">Sortera</string>
-    <string name="date">Sortera efter datum</string>
-    <string name="deleteme____1">Sortera efter namn</string>
+    <string name="date">Datum</string>
+    <string name="deleteme____1">Namn</string>
     <string name="size">Storlek</string>
     <string name="reverse_order">Omvänd ordning</string>
     <string name="contribute">Bidra</string>
@@ -162,8 +162,8 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="highlight_line_ending_if_two_or_more_spaces">Markera mellanslag i slutet av rader som innehåller två eller flera mellanslag</string>
     <string name="use_monospace_for_code">Monospace för kod</string>
     <string name="disable_code_block_highlight">Inaktivera markering för kodblock</string>
-    <string name="auto_renumber_ordered_list">Auto-döpta beställda listor</string>
-    <string name="auto_renumber_ordered_list_slowdown">Det här alternativet kan påverka appens prestanda.</string>
+    <string name="auto_renumber_ordered_list">Byt siffra automatiskt i numrerade listor</string>
+    <string name="auto_renumber_ordered_list_slowdown">Detta alternativ kan påverka appens prestanda.</string>
     <string name="use_different_fonttype_slow_down">Använd typsnitt med fast bredd för kod. Att ändra typsnitt dynamiskt påverkar appens prestanda.</string>
     <string name="general">Generella</string>
     <string name="resources">Resurser</string>
@@ -176,7 +176,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="key_page_down">Sida ned (Page down)</string>
     <string name="move_text_one_line_up">Flytta text en rad upp</string>
     <string name="move_text_one_line_down">Flytta text en rad nedåt</string>
-    <string name="start_new_line_below">Starta ny rad nedan</string>
+    <string name="start_new_line_below">Påbörja ny rad nedan</string>
     <string name="key_pos_1">Början av rad (Pos home)</string>
     <string name="key_pos_end">Slutet av rad (Pos end)</string>
     <string name="key_pos_1_document">Dokumentets början</string>
@@ -186,7 +186,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="start_on_bottom">Börja vid botten</string>
     <string name="start_on_bottom_when_loading_document">När dokument laddat, placera markören vid slutet av raden</string>
     <string name="unordered_list_character">Oordnat listtecken</string>
-    <string name="character_to_start_items_of_unordered_list_with">Vilket tecken att använda för att beteckna obeställda listor</string>
+    <string name="character_to_start_items_of_unordered_list_with">Vilket tecken som ska användas för att beteckna oordnade listor</string>
     <string name="unordered_list_char_dash">Streck (-)</string>
     <string name="unordered_list_char_asterisk">Asterisk (*)</string>
     <string name="unordered_list_char_plus">Plus (+)</string>
@@ -201,7 +201,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="top">Överst</string>
     <string name="bottom">Längst ner</string>
     <string name="center">Mitten</string>
-    <string name="textaction_spacing">Textmodulsavstånd</string>
+    <string name="textaction_spacing">Avstånd för textåtgärd</string>
     <string name="horizontal_space_between_textactions">Horisontellt utrymme mellan textåtgärdsknappar</string>
     <string name="center_text">Centrera text</string>
     <string name="edit_text_in_center_of_screen">Editera text i mitten av skärmen</string>
@@ -243,8 +243,8 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="math">Matematik</string>
     <string name="table_of_contents">Innehållsförteckning</string>
     <string name="miscellaneous">Diverse</string>
-    <string name="textaction">Texthändelse</string>
-    <string name="textactions">Texthändelser</string>
+    <string name="textaction">Åtgärd för text</string>
+    <string name="textactions">Åtgärder för text</string>
     <string name="prefer_view">Föredra vy</string>
     <string name="no_calendar_app_is_installed">Ingen kalender-app är installerad!</string>
     <string name="popular_documents">Populära dokument</string>
