[ci skip] Update translations (Swedish)

--- a/app/src/main/res/values-sv/strings.xml
+++ b/app/src/main/res/values-sv/strings.xml
@@ -309,15 +309,15 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="list_in_recent_files">Visa senaste filerna</string>
     <string name="reload">Ladda om</string>
     <string name="wrap_words">Bryt långa rader</string>
-    <string name="soft_break_if_not_fit_to_width_else_enable_horizontal_scrolling">Mjuk brytning om texten inte får plats på skärmen. Annars, sätt på horisontell rullning.</string>
+    <string name="soft_break_if_not_fit_to_width_else_enable_horizontal_scrolling">Mjuk brytning om texten inte får plats på skärmen. Aktiverar annars horisontell rullning.</string>
     <string name="recursive_search_in_current_directory">Rekursiv sökning i aktuell katalog.</string>
-    <string name="always_open_with_this_app">Föredra att öppna med appen</string>
-    <string name="always_open_files_with_this_app_when_list_contains_file_extension">Öppna alltid filer av typen i listan med den här appen. Använd till exempel \'None, .html, .css , .js\' om du vill redigera webfiler och filer utan filändelse.</string>
+    <string name="always_open_with_this_app">Öppna alltid med denna app</string>
+    <string name="always_open_files_with_this_app_when_list_contains_file_extension">Öppna alltid filer med filtyperna i listan med den här appen. Använd till exempel \'None, .html, .css , .js\' om du vill redigera webbfiler och filer utan filändelse.</string>
     <string name="template">Mall</string>
     <string name="send_debug_log">Skicka felsökningslogg</string>
     <string name="print_pdf">Print / PDF</string>
     <string name="bigger_headings">Större rubriker</string>
-    <string name="increase_text_size_of_headings_according_to_level">Öka textstorleken på rubriker enligt nivå (# h1, ## h2. ### h3…)</string>
+    <string name="increase_text_size_of_headings_according_to_level">Öka textstorleken på rubriker efter nivå (# h1, ## h2. ### h3…)</string>
     <string name="current">Nuvarande</string>
     <string name="record_audio">Spela in ljud</string>
     <string name="attach">Bifoga</string>
