[ci skip] Update translations (Swedish)

--- a/app/src/main/res/values-sv/strings.xml
+++ b/app/src/main/res/values-sv/strings.xml
@@ -176,7 +176,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="key_page_down">Sida ned (Page down)</string>
     <string name="move_text_one_line_up">Flytta text en rad upp</string>
     <string name="move_text_one_line_down">Flytta text en rad nedåt</string>
-    <string name="start_new_line_below">Påbörja ny rad nedan</string>
+    <string name="start_new_line_below">Starta ny rad nedan</string>
     <string name="key_pos_1">Början av rad (Pos home)</string>
     <string name="key_pos_end">Slutet av rad (Pos end)</string>
     <string name="key_pos_1_document">Dokumentets början</string>
@@ -331,14 +331,14 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="how_much_columns_press_table_button_long_to_start_table">Hur många kolumner? Tryck på tabellknappen för att starta en tabell (infoga sidhuvud), tryck kort för att lägga till en rad.</string>
     <string name="example_of_a_markdown_table">Exempel på en markdown tabell</string>
     <string name="delete_lines">Radera rader</string>
-    <string name="unordered_list">Osorterad lista</string>
-    <string name="ordered_list">Sorterad lista</string>
-    <string name="check_list">Kontrollera lista</string>
+    <string name="unordered_list">Punktlista</string>
+    <string name="ordered_list">Numrerad lista</string>
+    <string name="check_list">Checklista</string>
     <string name="open_link">Öppna länk</string>
     <string name="common_color_picker">Färg väljare</string>
     <string name="date_and_time">Datum och tid</string>
     <string name="jump_to_bottom">Hoppa till botten</string>
-    <string name="quote">Offert</string>
+    <string name="quote">Citat</string>
     <string name="heading">Rubrik</string>
     <string name="heading_1">Rubrik 1</string>
     <string name="heading_2">Rubrik 2</string>
@@ -346,10 +346,10 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="heading_4">Rubrik 4</string>
     <string name="heading_5">Rubrik 5</string>
     <string name="heading_6">Rubrik 6</string>
-    <string name="bold">Bold</string>
-    <string name="italic">Italic</string>
+    <string name="bold">Fetstil</string>
+    <string name="italic">Kursiv stil</string>
     <string name="highlighted">Markerad</string>
-    <string name="strikeout">Slå ut</string>
+    <string name="strikeout">Genomstruken</string>
     <string name="inline_code">Infogad kod</string>
     <string name="horizontal_line">Horisontell linje</string>
     <string name="toggle_done">Växla klar</string>
@@ -365,7 +365,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="expand_collapse">Expandera / Komprimera</string>
     <string name="essential">Viktig</string>
     <string name="append_human_readable_uuid_to_new_tasks">Lägg till läsbar UUID för nya uppgifter</string>
-    <string name="action_order">Åtgärd order</string>
+    <string name="action_order">Ordning för textåtgärds-knappar</string>
     <string name="toggle_action_visibility">Växla åtgärdens synlighet</string>
     <string name="load_default_settings">Ladda standardinställningar</string>
     <string name="drag">Dra</string>
