--- a/app/src/main/res/values-ckb/strings.xml
+++ b/app/src/main/res/values-ckb/strings.xml
@@ -23,12 +23,18 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="browse_filesystem">کردنەوەی فایلی سیستەم</string>
     <string name="title">ناونیشان</string>
     <string name="empty_directory">فۆڵدەری بەتاڵ</string>
+    <string name="enter_name_of_folder">ناوی فۆڵدەر بنوسە</string>
+    <string name="create_folder">دروستکردنی فۆڵدەر</string>
+    <string name="create_new_document">دروستکردنی بەڵگەنامەی نوێ</string>
     <string name="move">گواستنەوە</string>
     <string name="copy">لەبەرگرتنەوە</string>
     <string name="info">زانیاری</string>
+    <string name="import_from_device">هێنان لە ئامێرەوە</string>
     <string name="import_">هێنان</string>
     <string name="select_folder">فۆڵدەر دیاریبکە</string>
     <string name="edit">دەستکاریکردن</string>
+    <string name="search_documents">گەڕان بۆ بەڵگەنامە</string>
+    <string name="share_to_arrow" tools:ignore="TypographyEllipsis">ناردن بۆ&#8230;</string>
     <string name="share">ناردن</string>
     <string name="search">گەڕان</string>
     <string name="editor">دەستکاریکەر</string>
@@ -41,8 +47,34 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="file">فایل</string>
     <string name="image">وێنە</string>
     <string name="font_size">قەبارەی نووسین</string>
+    <string name="last_modified_witharg">دوایین دەستکاریکردن: %s</string>
+    <string name="select_this_folder">دیاریکردنی ئەم فۆڵدەرە</string>
     <string name="select">دیاریبکە</string>
     <string name="create">دروستکردن</string>
+    <string name="select_entries">دیاریکردنی هەمووی</string>
+    <string name="one_item_selected">یەک فایل دیاریکراوە</string>
+    <string name="items_selected_witharg" tools:ignore="PluralsCandidate">%d فایل دیاریکراوە</string>
+    <string name="hide_statusbar">شارنەوەی شریتی دۆخ</string>
+    <string name="name">ناو</string>
+    <string name="url_or_path">ناونیشان / شوێن</string>
+    <string name="insert_link">زیادکردنی بەستەر</string>
+    <string name="insert_image">زیادکردنی وێنە</string>
+    <string name="contributors">بەشداربووان</string>
+    <string name="save_location">شوێنی پاراستن</string>
+    <string name="licenses">مۆڵەت</string>
+    <string name="changelog">گۆڕانکارییەکان</string>
+    <string name="more_info">زانیاری زیاتر</string>
+    <string name="show_license_of_the_app">بینینی مۆڵەتی بەرنامەکە</string>
+    <string name="language_change_restart_description">بۆ گۆڕینی زمان، پێویستە بەرنامەکە دابخەیت و دووبارە بیکەیتەوە</string>
+    <string name="language">زمان</string>
+    <string name="open_with">کردنەوە لەڕێی</string>
+    <string name="sort">ڕیزکردن بەپێی</string>
+    <string name="date">بەروار</string>
+    <string name="deleteme____1">ناو</string>
+    <string name="size">قەبارە</string>
+    <string name="contribute">هاوکاریکردن</string>
+    <string name="donate">بەخشش</string>
+    <string name="project_page">لاپەڕەی پڕۆژەکە</string>
     <string name="more">زیاتر</string>
     <string name="help">یارمەتی</string>
     <string name="save">پاراستن</string>
@@ -53,4 +85,65 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="underline">هێڵ بە ژێردا هاتوو</string>
     <string name="rtl_rendering">پشتگیری ڕاست بۆ چەپ</string>
     <string name="general">گشتی</string>
+    <string name="resources">سەرچاوەکان</string>
+    <string name="line_spacing">مەودای نێوان</string>
+    <string name="unordered_list_char_dash">داش (-)</string>
+    <string name="unordered_list_char_asterisk">ئەستێرە (*)</string>
+    <string name="unordered_list_char_plus">زیادکردن (+)</string>
+    <string name="default_">بنەڕەتی</string>
+    <string name="left">چەپ</string>
+    <string name="right">ڕاست</string>
+    <string name="top">سەرەوە</string>
+    <string name="bottom">خوارەوە</string>
+    <string name="help_translating_this_app">کراوە بە کوردی لەلایەن گۆران غەریب - کوردرۆید</string>
+    <string name="source_code">کۆدی سەرچاوە</string>
+    <string name="project_license">مۆڵەتی پڕۆژە</string>
+    <string name="location">شوێن</string>
+    <string name="directory">شوێن</string>
+    <string name="details">زانیاری</string>
+    <string name="calendar">ساڵنامە</string>
+    <string name="gallery_picture">وێنەی گەلەری</string>
+    <string name="camera_picture">وێنەی کامێرا</string>
+    <string name="description">وەسف</string>
+    <string name="edit_picture">دەستکاریکردنی وێنە</string>
+    <string name="color">ڕەنگ</string>
+    <string name="zero_width_space">نیو بزوێن</string>
+    <string name="preset">ڕێکخستنەوە</string>
+    <string name="type">جۆر</string>
+    <string name="folder">فۆڵدەر</string>
+    <string name="font">فۆنت</string>
+    <string name="folder_first">لەپێشدا فۆڵدەر</string>
+    <string name="go_to">چوون بۆ</string>
+    <string name="internal_storage">بیرگەی ناوخۆیی</string>
+    <string name="black">ڕەش</string>
+    <string name="white">سپی</string>
+    <string name="view">بینین</string>
+    <string name="view_mode">شێوازی پیشاندان</string>
+    <string name="edit_mode">شێوازی دەستکاریکردن</string>
+    <string name="share_into">ناردن بۆ</string>
+    <string name="favourite">دڵخواز</string>
+    <string name="favourites">دڵخوازەکان</string>
+    <string name="please_wait">تکایە چاوەڕانبە</string>
+    <string name="reload">بارکردنەوە</string>
+    <string name="tools">ئامرازەکان</string>
+    <string name="reading">خوێندنەوە</string>
+    <string name="read">خوێندنەوە</string>
+    <string name="table">خشتە</string>
+    <string name="italic">لار</string>
+    <string name="highlighted">دیاریکراو</string>
+    <string name="link_color">ڕەنگی بەستەر</string>
+    <string name="sort_alphabetically">ڕیزکردنی ئەبجەدی</string>
+    <string name="selected">دیاریکراو</string>
+    <string name="back">گەڕانەوە</string>
+    <string name="drag">ڕایکێشە</string>
+    <string name="created">دروستکرا</string>
+    <string name="file_settings">ڕێکخستنەکانی فایل</string>
+    <string name="search_and_replace">گەڕان / گۆڕین</string>
+    <string name="search_for">گەڕان بۆ</string>
+    <string name="replace_with">گۆڕین لەگەڵ</string>
+    <string name="replace_once">گۆڕینی (1)</string>
+    <string name="replace_all">گۆڕینی هەمووی</string>
+    <string name="matches">هاوشێوە</string>
+    <string name="backup_settings">ڕێکخستنی پاشەکەوت</string>
+    <string name="restore_settings">ڕێکخستنی گێڕانەوە</string>
 </resources>
